--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "react-datepicker": "^0.29.0",
     "react-dom": "^15.3.2",
     "react-highcharts": "^10.0.0",
+    "react-motion": "^0.4.5",
+    "react-prefixer": "^1.1.4",
     "redux": "^3.5.2",
     "redux-axios-middleware": "^2.0.0",
     "redux-create-reducer": "^1.1.1",
