--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "gulp"
+    "dev": "gulp",
+    "test": "",
+    "postinstall": "node ./node_modules/gulp/bin/gulp build"
   },
   "dependencies": {
     "app-module-path": "^1.1.0",
@@ -33,6 +35,7 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-class-prefix": "^1.0.1",
     "gulp-clean-css": "^2.0.12",
+    "gulp-eslint": "^3.0.1",
     "gulp-exec": "^2.1.2",
     "gulp-mocha": "^3.0.1",
     "gulp-nodemon": "^2.1.0",
@@ -72,6 +75,7 @@
     "react-highcharts": "^10.0.0",
     "react-motion": "^0.4.5",
     "react-prefixer": "^1.1.4",
+    "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-axios-middleware": "^2.0.0",
     "redux-create-reducer": "^1.1.1",
