--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
+    "babel-plugin-transform-class-properties": "^6.18.0",
+    "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
@@ -36,7 +38,7 @@
     "gulp-class-prefix": "^1.0.1",
     "gulp-clean-css": "^2.0.12",
     "gulp-eslint": "^3.0.1",
-    "gulp-exec": "^2.1.2",
+    "gulp-exec": "^2.1.3",
     "gulp-mocha": "^3.0.1",
     "gulp-nodemon": "^2.1.0",
     "gulp-plumber": "^1.1.0",
@@ -44,6 +46,7 @@
     "gulp-sass": "^2.3.2",
     "gulp-sass-glob": "^1.0.6",
     "gulp-uglify": "^2.0.0",
+    "gulp-watch": "^4.3.10",
     "hashcode": "^1.0.3",
     "highcharts": "^5.0.0",
     "highcharts-more": "^0.1.2",
