--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-class-properties": "^6.18.0",
-    "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
@@ -35,6 +34,7 @@
     "express-handlebars": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-buster": "^1.1.0",
     "gulp-class-prefix": "^1.0.1",
     "gulp-clean-css": "^2.0.12",
     "gulp-eslint": "^3.0.1",
@@ -88,6 +88,7 @@
     "scourjs": "^1.0.1",
     "serve-favicon": "~2.3.0",
     "store": "^1.3.20",
+    "throng": "^4.0.0",
     "uglify-js": "^2.7.3",
     "validate.js": "^0.10.0",
     "webpack": "^1.13.2",
