--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "student-dashboard",
+  "engines": {
+    "node": ">=6.8.1"
+  },
   "version": "0.0.0",
   "private": true,
   "scripts": {
