--- a/package.json
+++ b/package.json
@@ -34,6 +34,11 @@
     "copy-to-clipboard": "^3.0.5",
     "cors": "^2.8.0",
     "debug": "~2.2.0",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-promise": "^3.3.1",
+    "eslint-plugin-standard": "^2.0.1",
+    "expect": "^1.20.2",
     "express": "~4.13.1",
     "express-handlebars": "^3.0.0",
     "gulp": "^3.9.1",
