--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "gulp",
-    "test": "",
+    "test": "node ./node_modules/gulp/bin/gulp test",
     "postinstall": "if [ $RUN_BUILD ]; then npm run-script build; fi",
     "build": "node ./node_modules/gulp/bin/gulp build"
   },
