--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "copy-to-clipboard": "^3.0.5",
     "cors": "^2.8.0",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-promise": "^3.3.1",
@@ -75,6 +76,7 @@
     "moment": "^2.14.1",
     "mongoose": "^4.5.10",
     "morgan": "~1.6.1",
+    "nock": "^9.0.2",
     "normalizr": "^2.2.1",
     "oauth2-server": "^2.4.1",
     "randomstring": "^1.1.5",
@@ -97,6 +99,7 @@
     "scourjs": "^1.0.1",
     "serve-favicon": "~2.3.0",
     "store": "^1.3.20",
+    "supertest": "^2.0.1",
     "throng": "^4.0.0",
     "uglify-js": "^2.7.3",
     "validate.js": "^0.10.0",
