--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "bluebird": "^3.4.5",
     "body-parser": "~1.13.2",
     "bson-objectid": "^1.1.4",
+    "cacheman": "^2.2.1",
+    "cacheman-mongo": "^1.0.3",
     "classnames": "^2.2.5",
     "compose-function": "^3.0.3",
     "cookie-parser": "~1.3.5",
