--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "app-module-path": "^1.1.0",
     "assert": "^1.4.1",
+    "async": "^2.1.2",
     "axios": "^0.14.0",
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
@@ -28,6 +29,7 @@
     "bluebird": "^3.4.5",
     "body-parser": "~1.13.2",
     "bson-objectid": "^1.1.4",
+    "byline": "^5.0.0",
     "cacheman": "^2.2.1",
     "cacheman-mongo": "^1.0.3",
     "classnames": "^2.2.5",
@@ -62,6 +64,7 @@
     "hashcode": "^1.0.3",
     "highcharts": "^5.0.0",
     "highcharts-more": "^0.1.2",
+    "highland": "^2.10.1",
     "intro.js": "^2.3.0",
     "jade": "~1.11.0",
     "json-loader": "^0.5.4",
@@ -74,7 +77,6 @@
     "lodash.pickby": "^4.6.0",
     "map-values": "^1.0.1",
     "middleware-flow": "^0.8.0",
-    "mock-require": "^1.3.0",
     "moment": "^2.14.1",
     "mongoose": "^4.5.10",
     "morgan": "~1.6.1",
@@ -96,10 +98,13 @@
     "redux-axios-middleware": "^2.0.0",
     "redux-create-reducer": "^1.1.1",
     "redux-thunk": "^2.1.0",
+    "request": "^2.78.0",
     "request-promise": "^4.1.1",
     "reselect": "^2.5.3",
+    "rewire": "^2.5.2",
     "scourjs": "^1.0.1",
     "serve-favicon": "~2.3.0",
+    "sinon": "^1.17.6",
     "store": "^1.3.20",
     "supertest": "^2.0.1",
     "throng": "^4.0.0",
