--- a/package.json
+++ b/package.json
@@ -7,18 +7,21 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "gulp",
+    "dev": "node ./node_modules/gulp/bin/gulp",
     "test": "node ./node_modules/gulp/bin/gulp test",
     "postinstall": "if [ $RUN_BUILD ]; then npm run-script build; fi",
-    "build": "node ./node_modules/gulp/bin/gulp build"
+    "clean-dist": "rm -rf ./dist",
+    "build": "npm run-script clean-dist && node ./node_modules/gulp/bin/gulp build"
   },
   "dependencies": {
     "app-module-path": "^1.1.0",
     "assert": "^1.4.1",
     "async": "^2.1.2",
+    "autoprefixer": "^6.5.3",
     "axios": "^0.14.0",
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-class-properties": "^6.18.0",
     "babel-polyfill": "^6.13.0",
@@ -37,8 +40,10 @@
     "cookie-parser": "~1.3.5",
     "copy-to-clipboard": "^3.0.5",
     "cors": "^2.8.0",
+    "css-loader": "^0.26.0",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
+    "ejs": "^2.5.3",
     "eslint-config-standard": "^6.2.1",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-promise": "^3.3.1",
@@ -46,6 +51,7 @@
     "expect": "^1.20.2",
     "express": "~4.13.1",
     "express-handlebars": "^3.0.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-buster": "^1.1.0",
@@ -57,6 +63,7 @@
     "gulp-nodemon": "^2.1.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-rev": "^7.1.2",
     "gulp-sass": "^2.3.2",
     "gulp-sass-glob": "^1.0.6",
     "gulp-uglify": "^2.0.0",
@@ -66,7 +73,6 @@
     "highcharts-more": "^0.1.2",
     "highland": "^2.10.1",
     "intro.js": "^2.3.0",
-    "jade": "~1.11.0",
     "json-loader": "^0.5.4",
     "keymirror": "^0.1.1",
     "lodash": "^4.15.0",
@@ -81,8 +87,12 @@
     "mongoose": "^4.5.10",
     "morgan": "~1.6.1",
     "nock": "^9.0.2",
+    "node-sass": "^3.13.0",
     "normalizr": "^2.2.1",
     "oauth2-server": "^2.4.1",
+    "postcss-class-prefix": "^0.3.0",
+    "postcss-loader": "^1.1.1",
+    "precss": "^1.4.0",
     "randomstring": "^1.1.5",
     "react": "^15.3.2",
     "react-addons-create-fragment": "^15.3.1",
@@ -102,15 +112,17 @@
     "request-promise": "^4.1.1",
     "reselect": "^2.5.3",
     "rewire": "^2.5.2",
+    "sass-loader": "^4.0.2",
     "scourjs": "^1.0.1",
     "serve-favicon": "~2.3.0",
     "sinon": "^1.17.6",
     "store": "^1.3.20",
+    "style-loader": "^0.13.1",
     "supertest": "^2.0.1",
     "throng": "^4.0.0",
     "uglify-js": "^2.7.3",
     "validate.js": "^0.10.0",
-    "webpack": "^1.13.2",
+    "webpack": "^1.13.3",
     "webpack-stream": "^3.2.0"
   }
 }
