--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "postcss-class-prefix": "^0.3.0",
     "postcss-loader": "^1.1.1",
     "precss": "^1.4.0",
+    "pretty-error": "^2.0.2",
     "randomstring": "^1.1.5",
     "react": "^15.3.2",
     "react-addons-create-fragment": "^15.3.1",
