--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,6 +4,8 @@ RUN mkdir -p /student-dashboard/src
 WORKDIR /student-dashboard/src
 
 COPY . /student-dashboard/src
+RUN touch rev-manifest.json
+RUN echo "{}" > rev-manifest.json
 RUN npm install
 
 EXPOSE 3000
