--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,11 +1,14 @@
 FROM node:6.8
 
 RUN mkdir -p /student-dashboard/src
+
 WORKDIR /student-dashboard/src
 
-COPY . /student-dashboard/src
+COPY ./package.json /student-dashboard/src
 
 RUN npm install
+
+COPY . /student-dashboard/src
 
 EXPOSE 3000
 
