--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 install:
 before_script:
-  - docker-compose -f docker-compose.ci.yml up -d -e NODE_ENV=production -e SD_API_URL=$SD_API_URL -e TMC_API_URL=$TMC_API_URL -e TMC_ADMIN_ACCESS_TOKEN=$TMC_ADMIN_ACCESS_TOKEN -e MONGO_DB=$MONGO_DB
+  - docker-compose -f docker-compose.ci.yml -d -e NODE_ENV=production -e SD_API_URL=$SD_API_URL -e TMC_API_URL=$TMC_API_URL -e TMC_ADMIN_ACCESS_TOKEN=$TMC_ADMIN_ACCESS_TOKEN -e MONGO_DB=$MONGO_DB up
 script:
   - bash ./run-tests.sh
 after_script:
