--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -1,7 +1,5 @@
 FROM node:6.8
 
-RUN npm install pm2 -g
-
 RUN mkdir -p /student-dashboard/src
 
 WORKDIR /student-dashboard/src
@@ -16,4 +14,4 @@ RUN NODE_ENV=production npm run-script build
 
 EXPOSE 3000
 
-CMD ["pm2-docker", "process.yml"]
+CMD npm start
