--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -1,10 +1,10 @@
 web:
   build: .
+  dockerfile: Dockerfile.ci
   ports:
     - 3000:3000
   links:
     - mongo
-  env_file: .env
 mongo:
   image: mongo:3.2
   ports:
