--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "lodash.omit": "^4.5.0",
     "lodash.pick": "^4.4.0",
     "lodash.pickby": "^4.6.0",
+    "lodash.round": "^4.0.4",
     "map-values": "^1.0.1",
     "middleware-flow": "^0.8.0",
     "moment": "^2.14.1",
@@ -96,6 +97,7 @@
     "postcss-loader": "^1.1.1",
     "precss": "^1.4.0",
     "pretty-error": "^2.0.2",
+    "pubsub-js": "^1.5.4",
     "randomstring": "^1.1.5",
     "react": "^15.3.2",
     "react-addons-create-fragment": "^15.3.1",
