--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
     "throng": "^4.0.0",
     "uglify-js": "^2.7.3",
     "validate.js": "^0.10.0",
-    "webpack": "^1.13.3",
+    "webpack": "@1.13.3",
     "webpack-stream": "^3.2.0"
   }
 }
