--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "normalizr": "^2.2.1",
     "oauth2-server": "^2.4.1",
     "postcss-class-prefix": "^0.3.0",
-    "postcss-loader": "^1.1.1",
+    "postcss-loader": "^1.3.3",
     "precss": "^1.4.0",
     "pretty-error": "^2.0.2",
     "pubsub-js": "^1.5.4",
@@ -129,7 +129,7 @@
     "throng": "^4.0.0",
     "uglify-js": "^2.7.3",
     "validate.js": "^0.10.0",
-    "webpack": "1.13.3",
+    "webpack": "^1.13.3",
     "webpack-stream": "^3.2.0"
   }
 }
