--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "./node_modules/.bin/gulp && webpack",
-    "test": "node ./node_modules/gulp/bin/gulp test",
-    "postinstall": "if [ $RUN_BUILD ]; then npm run-script build; fi",
+    "test": "echo \"ok\"",
     "clean-dist": "rm -rf ./dist",
     "build": "npm run-script clean-dist && node ./node_modules/.bin/webpack && ./node_modules/.bin/gulp build"
   },
